--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/server.js --exec babel-node",
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "postinstall": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "webpack-dev-middleware": "^1.10.2"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
